# dotazure-rs

./: .cspell.json  Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/: secrets.rs
infra/: main.bicep
src/: context.rs  error.rs  lib.rs
