[package]
name = "dotazure"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/heaths/dotazure-rs"
license = "MIT"

[features]
default = ["dotenvy"]

[dependencies]
dotenvy = { version = "0.15.7", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
azure_identity = "0.23.0"
azure_security_keyvault_secrets = "0.2.0"
tokio = { version = "1.44.2", features = ["rt", "macros"] }

[[example]]
name = "secrets"
required-features = ["dotenvy"]
