[package]
name = "dotazure"
version = "0.2.0"
edition = "2021"
description = "Locate and load environment variables defined when provisioning an Azure Developer CLI project."
repository = "https://github.com/heaths/dotazure-rs"
license = "MIT"

[dependencies]
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
azure_identity = "0.23.0"
azure_security_keyvault_secrets = "0.2.0"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
